add test for otp key
